// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM crAaGm"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM crAaGm"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD botKqd outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-hAZoDl jTMaxl"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-fnykZs jYSETG button__loading-spinner"
        >
          <div
            class="sc-crXcEl gcTsuc"
          >
            <div
              class="sc-evZas eJPqj"
            />
            <div
              class="sc-evZas fpKILf"
            />
            <div
              class="sc-evZas eZptxQ"
            />
            <div
              class="sc-evZas bOFFkB"
            />
            <div
              class="sc-evZas iFBFTy"
            />
            <div
              class="sc-evZas htaoqH"
            />
            <div
              class="sc-evZas cYwNmX"
            />
            <div
              class="sc-evZas kutSFz"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM crAaGm"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM crAaGm"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD cIraFQ account__button"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD HMkzI account__button"
        disabled=""
        type="button"
      >
        <span
          class="sc-hAZoDl jTMaxl"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-fnykZs jYSETG button__loading-spinner"
        >
          <div
            class="sc-crXcEl gcTsuc"
          >
            <div
              class="sc-evZas eJPqj"
            />
            <div
              class="sc-evZas fpKILf"
            />
            <div
              class="sc-evZas eZptxQ"
            />
            <div
              class="sc-evZas bOFFkB"
            />
            <div
              class="sc-evZas iFBFTy"
            />
            <div
              class="sc-evZas htaoqH"
            />
            <div
              class="sc-evZas cYwNmX"
            />
            <div
              class="sc-evZas kutSFz"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-breuTD fBUHnV outer"
        type="button"
      >
        <span
          class="sc-hAZoDl gYBdAO"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
